<resources>
    <string name="app_name">sroda16_15</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="marks">Liczba ocen</string>
    <string name="name_hint">Wpisz imię</string>
    <string name="surname_hint">Wpisz nazwisko</string>
    <string name="marks_hint">Wpisz liczbę ocen (5-15)</string>
    <string name="marksButton">Oceny</string>
    <string name="title_activity_panel_ocen">PanelOcen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="error">Błąd!</string>
    <string name="error_value">Liczba nie należy do przedziału!</string>
    <string name="error_empty">Pole nie może być puste!</string>
    <string-array name="przedmioty">
        <item>Fiz.</item>
        <item>Mat.</item>
        <item>Pol.</item>
        <item>Ang.</item>
        <item>Inf.</item>
        <item>El.</item>
        <item>TC.</item>
        <item>PP.</item>
        <item>PwChO.</item>
        <item>SzP.</item>
        <item>Mech.</item>
        <item>Bud.</item>
        <item>Chem.</item>
        <item>Fin.</item>
        <item>W-f</item>
    </string-array>
    <string name="marks_value_2">2</string>
    <string name="marks_value_3">3</string>
    <string name="marks_value_4">4</string>
    <string name="marks_value_5">5</string>
    <string name="count_mean_button">Oblicz średnią</string>
    <string name="button_finish_good">Super :)</string>
    <string name="button_finish_bad">Tym razem mi nie poszło</string>
    <string name="toast_finish_good">Gratulacje! Otrzymujesz zaliczenie!</string>
    <string name="toast_finish_bad">Wysyłam podanie o zaliczenie warunkowe</string>
    <string name="show_result">Średnia studenta: </string>
</resources>